Closed Bug 848639 Opened 12 years ago Closed 12 years ago

Prevent DecodeHeader for Ogg Skeleton tracks from failing on valid indexes

Categories

(Core :: Audio/Video, defect)

defect
Not set
normal

Tracking

()

VERIFIED FIXED
mozilla22
blocking-b2g leo+
Tracking Status
firefox20 --- wontfix
firefox21 --- wontfix
firefox22 --- fixed
b2g18 --- fixed
b2g18-v1.0.0 --- wontfix
b2g18-v1.0.1 --- unaffected

People

(Reporter: cajbir, Assigned: cajbir)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

DecodeHeader for Ogg Skeleton tracks returns 'false' in the default case when it should probably return true like the other DecodeHeader implementations. The comment for DecodeHeader states that 'false' means there are no more headers to process but the implementations seem to return 'false' when there is an error, and in the 'no more header' case they set a flag which can be checked by calling another method. The issue can be shown when playing an Ogg file with a Skeleton index track in a JAR/ZIP file. In this case the duration of the file can be determined without seeking but the implementation of this checks the result of DecodeHeader and bails when it is 'false', deactivating the stream, resulting in no duration being used. Without the fix, the file http://cd.pn/file2.zip will not allow seeking in the enclosed ogg file. Test by downloading file2.zip locally and trying the URL: jar:file:///home/chris/src/index/file2.zip!/indexed.ogg
Attached patch fixSplinter Review
Assignee: nobody → chris.double
Status: NEW → ASSIGNED
Attachment #721971 - Flags: review?(cpearce)
Blocks: 836814
Attachment #721971 - Flags: review?(cpearce) → review+
This blocks a leo blocker, correct?
blocking-b2g: --- → leo?
Blocks: 836643
Is this ready to land?
(In reply to Jason Duell (:jduell) from comment #3) > Is this ready to land? Yes, waiting for inbound to open and I'll push.
Status: ASSIGNED → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla22
Blocks a blocker.
blocking-b2g: leo? → leo+
Nokia in https://bugzilla.mozilla.org/show_bug.cgi?id=836643#c31 claims they verified this fix. Marking as such.
Status: RESOLVED → VERIFIED
Flags: in-moztrap-
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: