Bug 848639 - Prevent DecodeHeader for Ogg Skeleton tracks from failing on valid indexes. r=cpearce, a=tef+