content/media/ogg/nsOggCodecState.cpp
@@ -1554,5 +1554,5 @@ bool nsSkeletonState::DecodeHeader(ogg_packet* aPacket)
     mDoneReadingHeaders = true;
     return true;
   }
-  return false;
+  return true;
 }
